Dec 04, 2019
  added code to load CVCL ontology (cellosaurus ontology)
  removed code for unused cmdline option '-drop_synonyms'
  DO ontology: added loading of 'ICD9:' and 'ICD10:' xrefs

Nov 25, 2019
  code tune-up to load EFO ontology

Oct 18, 2019
  obo-generator: added export of subsets

Sep 30, 2019
  term stats loader: simplified code

Sep 20, 2019
  added script check_for_cycles.sh

Jul 1, 2019
  loader: fixed loading of term comments
    if a term comment contains new line, carriage return or tab character(s), they are replaced by a space character
    otherwise, we could get Oracle CHECK violation exception

Jun 19, 2019
  DO ontology: added loading of 'NCI:' and 'ICD-O' xrefs

Jun 10, 2019
  updated URL for MP ontology (to use MGI FTP url, instead of http://ontologies.berkeleybop.org)
  -- MGI said that they will be phasing out commits of MP ontology to berkeleybop.org

May 17, 2019  v.1.5.55
  updated URL for GO ontology (to use daily snapshots instead of monthly)

May 01, 2019  v.1.5.54
  DoLoader: added reporting of obsolete OMIM ids present in DO file

Apr 04, 2019  v.1.5.53
  HPO root term name is overridden to be 'Human phenotype' -- the original root term name, which was 'All',
    will become the root term synonym
  fixed issue of orphaned GO terms that should have been obsoleted by the pipeline

Feb 11, 2019  v.1.5.52
  updated source url for GO.obo file

Jan 15, 2019  v.1.5.51
  fixed generation of OBO files with synonyms having synonymtypedefs

Sep 28, 2018  v.1.5.50
  moved from subversion to github

Aug 20, 2018  v.1.5.49
  OboFileGenerator: fix to skip exporting xrefs without value (to avoid NullPointerException)

Aug 20, 2018  v.1.5.49
  OboFileGenerator: fix to skip exporting xrefs without value (to avoid NullPointerException)

Jul 11, 2018  v.1.5.47
  OboFileGenerator: properly emits synonymtypedef DISPLAY_SYNONYM

Jun 12, 2018  v.1.5.46
  TermStatGenerator: fixed issue with 'child_term_count' and 'parent_term_count'
