@@ -17,9 +17,6 @@ String myAppName = 'OntologyLoad'
 
 repositories {
     mavenCentral()
-    maven {
-        url 'https://packages.atlassian.com/maven-3rdparty'
-    }
 }
 
 dependencies {
@@ -27,11 +24,10 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.10'
-    compile 'org.springframework:spring-beans:5.2.0.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.0.RELEASE'
+    compile 'org.apache.httpcomponents:httpclient:4.5.11'
+    compile 'org.springframework:spring-beans:5.2.1.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.1.RELEASE'
     compile 'com.io7m.xom:xom:1.2.10'
-    compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
